fix: dark mode skill component

--- a/src/components/Skill/Skill.scss
+++ b/src/components/Skill/Skill.scss
@@ -42,7 +42,7 @@
     }
 }
 
-.exp-dark {
+.skill-dark {
     background-color: var.$c6;
     color: var.$b;
 
